--- a/pom.xml
+++ b/pom.xml
@@ -17,20 +17,27 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 	</dependency>
-	<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+	
 	<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
 	<dependency>
     	<groupId>org.mongodb</groupId>
     	<artifactId>mongo-java-driver</artifactId>
     	<version>3.4.1</version>
 	</dependency>
+	
 	<dependency>
         <groupId>org.mongodb.morphia</groupId>
         <artifactId>morphia</artifactId>
         <version>1.3.1</version>
     </dependency>
     
+    <dependency>
+    	<groupId>org.easyrules</groupId>
+    	<artifactId>easyrules-core</artifactId>
+    	<version>2.4.0</version>
+	</dependency>
   </dependencies>
+  
   <build>
 		<plugins>
 			<plugin>
